--- a/build.gradle
+++ b/build.gradle
@@ -23,29 +23,29 @@ ext {
     androidXVersion = '1.0.0'
     androidXAnnotations = '1.4.0'
     androidXLegacySupport = '1.0.0'
-    appCompatVersion = '1.4.1'
+    appCompatVersion = '1.5.0'
     archLifecycleVersion = '2.5.1'
     cardVersion = '1.0.0'
-    materialVersion = '1.5.0'
+    materialVersion = '1.6.1'
     fragmentVersion = '1.5.2'//''1.4.1' ci sono modifiche su fragment test, da studiare aggiornamento
     recyclerViewVersion = '1.2.1'
-    mockitoVersion = '2.8.9'
+    mockitoVersion = '4.7.0'
     constraintVersion = '2.1.4'
-    dexMakerVersion = '2.12.1'
+    dexMakerVersion = '2.28.3'
     coroutinesVersion = '1.6.4'
     roomVersion = '2.4.3'
-    koinVersion = '3.0.1'
-    truthVersion = '0.44'
+    koinVersion = '3.2.0'
+    truthVersion = '1.1.3'
     junitVersion = '4.12.2'
     androidXTestCoreVersion = '1.4.0'
-    robolectricVersion = '4.5-alpha-3'
+    robolectricVersion = '4.8.2'
     androidXTestExtKotlinRunnerVersion = '1.1.3'
     archTestingVersion = '2.1.0'
     playServicesVersion = '17.0.0'
     hamcrestVersion = '1.3'
     androidXTestRulesVersion = '1.4.0'
     espressoVersion = '3.4.0'
-    gsonVersion = '2.8.9'
-    navigationVersion= '2.4.1'
+    gsonVersion = '2.9.1'
+    navigationVersion= '2.5.1'
 
 }
